[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
home = "0.5"
structopt = "0.3"
anyhow = "1.0.93"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde] # Add serde in its own section.
features = ["derive"] # We'll need the derive feature.
version = "1.0"
